--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,5 +1,291 @@
-.home{
-    background-color: crimson;
-    width: 90%;
-    height: 100vh;
+@import '../../assets/style/style.scss';
+.home__container{
+    background-color: $darkGray;
+    width: 100%;
+    height: 111vh;
+    display: flex;
+}
+.home__content{
+    flex: 0.7;
+    padding: 24px 24px 0 24px;
+}
+.home__chart{
+    flex: 0.3;
+    background-color: $mainDark;
+    padding: 24px 24px 0 24px;
+
+}
+.home__header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.home__title{
+    margin-top: -20px;
+    color: white;
+}
+.home__des{
+    color: rgb(224, 230, 233);
+}
+.loopa{
+    width: 20px;
+    height: 20px;
+}
+.home_input_header{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background-color: #2D303E;
+    width: 220px;
+    height: 42px;
+    padding: 14px;
+    border-radius: 8px;
+}
+.header__search{
+    background-color: inherit;
+    border: none;
+    color: white;
+    width: 100%;
+    height: 100%;
+    outline: none;
+}
+.filter__header{
+    display: flex;
+    text-align: center;
+    gap: 32px;
+    margin: 24px 0;
+    cursor: pointer;    
+    .filter__text{
+        color: white;
+        font-size: 14px;
+        font-weight: 600;
+        padding-bottom: 3px;
+
+    }
+}
+.active_filter{
+    color:$lightPinck ;
+    font-size: 14px;
+    font-weight: 600;
+    border-bottom: 3px solid $lightPinck;
+}
+.products::-webkit-scrollbar{
+    display: none;
+}
+.products{
+    display: flex;
+    gap: 28px;
+    flex-wrap: wrap;
+    overflow: auto;
+    height: 600px;
+    padding-top: 20px;
+    cursor: pointer;
+    .cart_container{
+        width: 192px;
+        height: 226px;
+        background-color: $mainDark;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 12px;
+        margin-top: 20px;
+        .cart__image{
+            width: 132px;
+            height: 132px;
+            margin-top: -38px;
+         
+        }
+        .cart__title, .cart__price, .bowls{
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 18.2px;
+            text-align: center;
+            color: white;
+            margin-top: 8px;
+        }
+    }
+}
+.dish__title{
+    margin-bottom: 58px;
+    font-weight: 600;
+    font-size: 20px;
+    color: white;
+}
+.note__found{
+    color: white;
+}
+.orders{
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 28px;
+}
+.order__filter{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-top: 24px;
+}
+.order_button{
+    border: 1px solid $lightPinck;
+    background-color: inherit;
+    color:$lightPinck;
+    padding: 7px 12px;
+    border-radius: 8px;
+}
+.active_order_button{
+    background-color: $lightPinck;
+    color:$lightPinck;
+    padding: 7px 12px;
+    border-radius: 8px;
+    color: white;
+    border: none;
+}
+.cart__haeder{
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #393C49;
+    .cart_header_name{
+        color: white;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 28px;
+    }
+    .header__wrapper{
+        display: flex;
+        align-items: center;
+        gap: 43px;
+    }
+}
+.cart__head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header__price{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+
+}
+.cart__image{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.header__content{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: white;
+}
+.cart__container{
+    margin-top: 24px;
+}
+.qty{
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2D303E;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+}
+.price{
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+}
+.order_note{
+    background-color: #393C49;
+    height: 48px;
+    width: 88%;
+    border-radius: 8px;
+    border: 1px solid #393C49;
+    outline: none;
+    padding-inline-start: 12px;
+    color: white;
+    font-size: 18px;
+}
+.cart__footer{
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.delete{
+    height: 48px;
+    width: 48px;
+    border-radius: 8px;
+    border: 1px solid $lightPinck;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.cart__component{
+    height: 454px;
+    overflow: auto;
+    &::-webkit-scrollbar{
+        display: none;
+    }
+    h1{
+        color: white;
+        font-size: 32px;
+        margin-top: 50px;
+    }
+}
+.payment__container{
+    padding-top: 24px;
+    border-top: 1px solid #393C49;
+    margin-top: 2px;
+    .payment__price{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &:nth-child(2){
+            margin-top: 16px;
+        }
+    }
+    .payment__text{
+        font-size: 14px;
+        font-weight: 400;
+        color: #ABBBC2;
+        line-height: 20px;
+        
+    }
+    .payment__init{
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
+        line-height: 22px;
+    }
+    .buy__button{
+        width: 100%;
+        background-color: $lightPinck;
+        height: 48px;
+        border: 8px;
+        color: white;
+        font-size: 14px;
+        font-weight: 600;
+        border-radius: 8px;
+        margin-top: 42px;
+        cursor: pointer;
+        &:active{
+            box-shadow: 1px 1px 12px 5px black;
+        }
+    }
+}
+.cart{
+    img{
+        border-radius: 50%;
+    }
 }
