--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,95 @@
 @import '../../assets/style/style.scss';
-.header{
-    background-color: $mainDark;
-    height: 100vh;
-    width: 10%;
+
+.header {
+    background: rgb(31, 29, 43);
+    height: 111vh;
+    width: 7%;
+    overflow: hidden;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100%;
+    margin-left: 12px;
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        height: 100%;
+        margin-top: 26px;
+
+        .active{
+            background: $mainGrey;
+            .item__link{
+                background: $lightPinck ;
+                color: white;
+                box-shadow: 0 0 15px 1px $lightPinck;
+            }
+        }
+    }
+
+    
+.active::before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    display: block;
+    position: absolute;
+    top: -12px;
+    right: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.active::after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    display: block;
+    position: absolute;
+    bottom: -12px;
+    right: 0;
+}
+}
+.nav__item {
+    padding: 10px;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item__link {
+    width: 52px;
+    height: 52px;
+    border-radius: 8px;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $lightPinck;
+}
+
+
+
+.logo {
+    border-radius: 12px;
+    background: rgba(235, 149, 106, 0.267);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 56px;
+    height: 56px;
+}
+
+.logo__div{
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
